--- a/pet-clinic-web/src/main/resources/templates/fragments/selectField.html
+++ b/pet-clinic-web/src/main/resources/templates/fragments/selectField.html
@@ -1,4 +1,5 @@
-<html>
+<html
+        xmlns:th="http://www.themeleaf.org">
 <body>
   <form>
     <th:block th:fragment="select (label, name, items)">
