--- a/pet-clinic-web/src/main/resources/templates/owners/findOwners.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/findOwners.html
@@ -21,9 +21,7 @@
     </div>
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-            <button class="btn btn-default" type="submit">Find
-                Owner
-            </button>
+            <button class="btn btn-default" type="submit">Find Owner</button>
         </div>
     </div>
 
