Create visit controller. Closes #57

--- a/pet-clinic-web/src/main/resources/templates/pets/createOrUpdateVisitForm.html
+++ b/pet-clinic-web/src/main/resources/templates/pets/createOrUpdateVisitForm.html
@@ -24,7 +24,7 @@
         <td
                 th:text="${#temporals.format(pet.birthDate, 'yyyy-MM-dd')}"/>
         </td>
-        <td th:text="${pet.petType}"/>
+        <td th:text="${pet.petType.name}"/>
         </td>
         <td
                 th:text="${pet.owner?.firstName + ' ' + pet.owner?.lastName}"/>
